# lich

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: lich-docker-images.yml  perf.yml
config/: lich-docker-ci-alpine.toml  lich-docker-ci-linux.toml  lich.toml
configs/: lich.toml
docker/: Dockerfile  Dockerfile-alpine  Dockerfile-linux  lich.toml  light-firmware-stripped
input/: lich.toml  light-firmware-stripped
input/alpine/: lich.toml
input/alpine-amd/: light-firmware-stripped
input/alpine-arm/: light-firmware-stripped
input/linux-arm/: lich.toml  light-firmware-stripped
light-firmware/: Cargo.toml  README.md
src/: configuration.rs  configurator.rs  main.rs  output.rs
src/tools/: mod.rs  perf.rs  powerstat.rs  powertop.rs  valgrind.rs
templates/: final_report.md  report.md
